refined documentation on early examples

--- a/AccessingDataFrames.ipynb
+++ b/AccessingDataFrames.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "If we load data into a DataFrame from a CSV (comma-separated value) text file, Pandas will automatically create rows labels, called an `index`, for the DataFrame, consisting of sequential integers.\n",
     "\n",
-    "The `.head()` DataFrame (and Series) method by default returns the first five rows. You can put a number in the parentheses to specify the number of rows to return. You can also use the `.tail()` method to see the last rows."
+    "The `.head()` DataFrame (and Series) function by default returns the first five rows. You can put a number in the parentheses to specify the number of rows to return. You can also use the `.tail()` function to see the last rows."
    ]
   },
   {
@@ -152,6 +152,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All you have to do is put an integer in the parentheses to see that many rows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -234,6 +241,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And even though the `index` looks like integers, it's really a special type of `Index` class under the hood. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -257,9 +271,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load CSV specifying index column\n",
+    "## Read CSV specifying index column\n",
     "\n",
-    "For this tutorial, though, **I want it to be clear how Pandas behaves when we use integers versus row labels for selecting DataFrame elements**, so I'm going to explicitly tell Pandas to use the Year column as the index.\n",
+    "For this tutorial, though, **I want it to be clear how Pandas behaves when we use integers versus row labels for selecting DataFrame elements**, so I'm going to explicitly tell Pandas to use the Year column from the data as the `index`.\n",
     "\n",
     "*Note: I could have just used the `df.set_index('Year')` method on the previous DataFrame, but I wanted to show you how to do it all in one step during the load.*"
    ]
@@ -376,7 +390,7 @@
    "source": [
     "### Index values\n",
     "\n",
-    "This time the Index has a name"
+    "This time the Index has a name, and is not just a sequential range of integers, but a list of the specific integers present in the Year column of the data."
    ]
   },
   {
@@ -410,7 +424,7 @@
     "### Column names\n",
     "\n",
     "- We can access the column names with the `df.columns` method\n",
-    "- That also happens to return a Pandas `Index`."
+    "- That also happens to return a Pandas `Index` – this time with a data type (dtype) of `'object'`, which is how Pandas deals with strings."
    ]
   },
   {
@@ -456,7 +470,7 @@
    "source": [
     "## `df[]` with name inside for a single column\n",
     "\n",
-    "Like with a Python dictionary, you can use the name of a column in square brackets to grab a single column out of a DataFrame. The column is returned as a Pandas `Series`, which is the standard 1D data structure, consisting of an `index` and the column's values."
+    "Like with a Python dictionary, you can use the (quoted) name of a column in square brackets to grab a single column out of a DataFrame. The column is returned as a Pandas `Series`, which is the standard 1D data structure, consisting of an `index` and the column's values."
    ]
   },
   {
@@ -493,7 +507,9 @@
     "\n",
     "If you instead put a list of column names inside the square brackets, Pandas will return an ordered set of those columns in a `DataFrame`. \n",
     "\n",
-    "**This looks a little weird because a list also has square brackets around it!** And, there is a problem you'll see below."
+    "**This looks a little weird because a list also has square brackets around it!** \n",
+    "\n",
+    "And, if you try to use this notation to assign just those columns to another variable, there is a problem you'll see below."
    ]
   },
   {
@@ -586,16 +602,18 @@
    "source": [
     "### This format isn't great for assignment – **SettingWithCopyWarning**\n",
     "\n",
-    "Just a quick note that if you use this list inside of square brackets notation and assign to a new variable as a way to just keep a couple columns, you will run into a **SettingWithCopyWarning** if you try to change that new DataFrame. \n",
+    "If you use this \"list inside of square brackets\" notation and assign to a new variable as a way to just keep a couple columns of your DataFrame, you will run into a **SettingWithCopyWarning** if you try to change that new DataFrame. \n",
     "\n",
-    "*Because of some Pandas inner-workings, when you slice or index into a DataFrame it's not actually clear whether it will create a \"view\" into the original DataFrame or a copy of the DataFrame!* You can get around it by:\n",
+    "*Because of some Pandas inner-workings, when you slice or index into a DataFrame it's not actually clear whether it will create a \"view\" into the original DataFrame or a copy of the data!* \n",
     "\n",
-    "- **If you are assigning a subset of a DataFrame to a new variable**, with the intention of creating a copy you'll work on independently of the original, **create an explicit copy by putting the `.copy()` method at the end!**\n",
-    "- If you're trying to assign values to a subset of a DataFrame, **use the `df.loc[,]` notation shown below.**\n",
+    "- **If you are assigning a subset of a DataFrame to a new variable**, with the intention of creating a copy that you'll work on independently of the original, **create an explicit copy by chaining the `.copy()` function to the end!**\n",
+    "- If you're trying to assign values to a subset of your original DataFrame, **use the `df.loc[,]` notation shown below.**\n",
     "\n",
-    "[This is the best explanation of the SettingWithCopyWarning I've seen](https://www.dataquest.io/blog/settingwithcopywarning/)\n",
+    "- Additional learning resources:\n",
+    "    - [The best explanation of the SettingWithCopyWarning I've seen](https://www.dataquest.io/blog/settingwithcopywarning/)\n",
+    "    - [A complicated explanation in the Pandas documentation](https://pandas.pydata.org/pandas-docs/version/0.22/indexing.html#indexing-view-versus-copy)\n",
     "\n",
-    "[Here is a complicated explanation in the Pandas documentation](https://pandas.pydata.org/pandas-docs/version/0.22/indexing.html#indexing-view-versus-copy)"
+    "Here's an example of when the problem arises. We try to put a couple columns into a new DataFrame, and then change the new DataFrame by adding an additional column:"
    ]
   },
   {
@@ -619,6 +637,13 @@
    "source": [
     "df_temp = df[['Business','Health']]\n",
     "df_temp['ratio'] = df['Business']/df['Health']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But if we make an explicit `.copy()` of the data, we don't have a problem:"
    ]
   },
   {
@@ -741,7 +766,7 @@
    "source": [
     "## `df[]` with boolean series for multiple rows, all columns\n",
     "\n",
-    "*Another potentially confusing notation, but in this case, convenient enough that you'll see it quite often. Note that you can easily use the `df.loc[,:]` notation below to do the same thing, and that is somewhat more readable.*\n",
+    "*Another potentially confusing notation, but in this case, convenient enough that you'll see it quite often. Note that you can easily use the `df.loc[,:]` notation below to do the same thing, which is somewhat more clear and readable.*\n",
     "\n",
     "**It's very common to want all the rows from your DataFrame which pass a certain test**, or set of criteria. You can write the test itself in a very straightforward way, returning a `Series` of True/False boolean values.\n",
     "\n",
@@ -815,7 +840,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Matching rows from conditional in square brackets\n",
+    "### Matching rows from conditional (boolean Series) in square brackets\n",
     "\n",
     "If you put that conditional test statement in square brackets after the DataFrame variable name, Pandas will return all the columns in all the rows that returned True in the test's boolean Series. As we saw above, only four rows pass the test"
    ]
@@ -1039,7 +1064,7 @@
    "source": [
     "---\n",
     "\n",
-    "# Multi-axis indexing\n",
+    "# Multi-axis indexing/selecting\n",
     "\n",
     "So far we've been returning either all rows of a single column, or all columns from rows matching a condition. There are two simple ways of selecting along rows and columns simultaneously: \n",
     "\n",
@@ -1057,7 +1082,7 @@
     "\n",
     "- A single label, e.g. 5 or 'a' (Note that 5 is interpreted as a label of the index. This use is not an integer position along the index.).\n",
     "- A list or array of labels ['a', 'b', 'c'].\n",
-    "- A slice object with labels 'a':'f' *(Note that contrary to usual python slices, both the start and the stop are included, when present in the index! See Slicing with labels and Endpoints are inclusive.)*\n",
+    "- A slice object with labels 'a':'f' *(Note that contrary to usual python slices, both the start and the stop are included, when present in the index! See [Slicing with labels](https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#indexing-slicing-with-labels) and [Endpoints are inclusive](https://pandas.pydata.org/pandas-docs/stable/user_guide/advanced.html#advanced-endpoints-are-inclusive).)*\n",
     "- A boolean array"
    ]
   },
@@ -1200,7 +1225,7 @@
    "source": [
     "### Slice notation is like giving the bounds of a list\n",
     "\n",
-    "Remember that both the rows and columns of a DataFrame are ordered. Ours is in the data order from the CSV file, but things like sorting can change that order. So, when you specify \"slice\" notation to say `start:end`, Pandas will take the order into account, and will give you an empty result if there is nothing between your specified bounds!\n",
+    "Remember that *both the rows and columns of a DataFrame are ordered* (which is different than a Python dictionary). Our DataFrame is in the data order from the CSV file, but things like sorting can change that order. So, when you specify \"slice\" notation to say `start:end`, Pandas will take the order into account, and will give you an empty result if there is nothing between your specified bounds!\n",
     "\n",
     "*You can also leave off the start or end of a slice range to include the beginning or end of the series.*"
    ]
@@ -1683,6 +1708,7 @@
     "### Boolean array from condition for either axis\n",
     "\n",
     "**Note: This is the more explicit (and perhaps more clear) version of the earlier syntax:**\n",
+    "\n",
     "`df[df['Business'] < 15]`"
    ]
   },
@@ -1843,7 +1869,7 @@
     "\n",
     "## `df.loc[row,col]` for setting values\n",
     "\n",
-    "So far we've been accessing values in DataFrames to read what's already there, but **the same methods can be used for setting values on DataFrame subsets**!\n",
+    "So far we've been accessing values in DataFrames to read/get what's already there, but **the same methods can be used for setting values on DataFrame subsets**!\n",
     "\n",
     "As was mentioned above, explicitly invoking the `.copy()` method is the best way to ensure you're making a copy of a subset of a DataFrame, if your intention is to work on a copy. This avoids the dreaded *SettingWithCopyWarning*.\n",
     "\n",
@@ -2235,7 +2261,7 @@
    "source": [
     "#### Location handy when Index is out of order\n",
     "\n",
-    "Remember when we sorted the rows by increasing Health percent, the years ended up out of order."
+    "Remember when we sorted the rows by increasing Health percentage, the years ended up out of order."
    ]
   },
   {
@@ -2631,7 +2657,7 @@
     "\n",
     "- When there are spaces in the column name\n",
     "- When the column name is the same as a DataFrame method\n",
-    "- When the column name is a variable"
+    "- When the name of a column you want to access is stored in a variable"
    ]
   },
   {
@@ -2693,7 +2719,7 @@
    "source": [
     "### Column name is the same as a DataFrame method\n",
     "\n",
-    "The output here will seem confusing, but it's basically saying that `.count` is a method (built-in function) of the DataFrame."
+    "`count` is the name of one of our columns, and it's easy to access those values with the \"quoted name in square brackets\" notation:"
    ]
   },
   {
@@ -2722,6 +2748,13 @@
    ],
    "source": [
     "min_suff_df['count']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But if we try to access that column's values with the \"dot\" notation, there is a problem. The output here will seem confusing, but it's basically saying that `.count` is a method (built-in function) of the DataFrame."
    ]
   },
   {
@@ -2758,7 +2791,7 @@
    "source": [
     "### The column name is stored in a variable\n",
     "\n",
-    "It's not uncommon to want to store a column name as a string in a variable, and then want to access that column using the stored name."
+    "It's not uncommon to want to access a column who's name string has been stored in a variable"
    ]
   },
   {
@@ -2788,6 +2821,13 @@
    "source": [
     "col_name = 'height'\n",
     "min_suff_df[col_name]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But, again, that doesn't work with the \"dot\" notation"
    ]
   },
   {
@@ -2821,7 +2861,7 @@
     "Many tutorials make use of the dot notation to select a single column of data. Why is this done when the brackets seem to be clearly superior? \n",
     "\n",
     "- **It might be because the official documentation contains plenty of examples that use it.**\n",
-    "- **It also uses three fewer characters which entice the very laziest amongst us.**"
+    "- **It also *uses three fewer characters which entices the very laziest amongst us*.**"
    ]
   },
   {
