--- a/MeltIntro.ipynb
+++ b/MeltIntro.ipynb
@@ -10,27 +10,27 @@
    "source": [
     "# Column headers are values, not variable names\n",
     "\n",
-    "**This is one of the more common data manipulations to get to a tidy form!**\n",
+    "*This is one of the more common data manipulations to get to a tidy form!*\n",
     "\n",
-    "## Un-pivoting from wide into tall format – a toy example\n",
+    "For example, many government data sets are in a format which is **good for visual lookup, but not for analysis and exploration**, with measurements in various years spread across multiple columns.\n",
     "\n",
-    "Many call this process of going from a wide data set to tall \"un-pivoting\" since a pivot table in Excel converts data from the tall format into wide. \n",
+    "### A toy example – years as column headers\n",
     "\n",
-    "The situation when you need this is that you have data in the column headers that you want in their own column. **The column headers are really a Dimension that should have its own column.**\n",
-    "\n",
-    "**The values that are spread across the multiple rows and columns in the body of the table are a Measure that should have a single column.**\n",
-    "\n",
-    "- **In Pandas you do a \"melt\"**\n",
-    "- In `tidyr` this is a \"gather\"\n",
-    "- In OpenRefine it's a \"Transpose->Transpose cells across columns into rows...\" operation\n",
-    "- In Tableau this is called a \"Pivot\"\n",
-    "\n",
-    "Let's first define a simple, small data frame:"
+    "Let's define a simple, small DataFrame with that structure:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,30 +54,30 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>z</th>\n",
+       "      <th>state</th>\n",
+       "      <th>2009</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2011</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>A</td>\n",
+       "      <td>Maine</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>B</td>\n",
+       "      <td>Alaska</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>C</td>\n",
+       "      <td>Ohio</td>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
        "      <td>9</td>\n",
@@ -87,23 +87,47 @@
        "</div>"
       ],
       "text/plain": [
-       "  label  x  y  z\n",
-       "0     A  1  4  7\n",
-       "1     B  2  5  8\n",
-       "2     C  3  6  9"
+       "    state  2009  2010  2011\n",
+       "0   Maine     1     4     7\n",
+       "1  Alaska     2     5     8\n",
+       "2    Ohio     3     6     9"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame({'label':['A','B','C'],\n",
-    "                  'x':[1,2,3],\n",
-    "                  'y':[4,5,6],\n",
-    "                  'z':[7,8,9]})\n",
+    "df = pd.DataFrame({'state':['Maine','Alaska','Ohio'],\n",
+    "                  '2009':[1,2,3],\n",
+    "                  '2010':[4,5,6],\n",
+    "                  '2011':[7,8,9]})\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Transforming from *wide* into *tall* format\n",
+    "\n",
+    "The problems with this format are \n",
+    "\n",
+    "- **The column headers are really a Dimension that should have its own *Year* column**\n",
+    "- **The values that are spread across the multiple rows and columns in the body of the table are a Measure that should be in a single column.**\n",
+    "\n",
+    "Confusingly, every language seems to have its own term for this process / transformation:\n",
+    "\n",
+    "- **In Pandas you do a \"melt\"**\n",
+    "- In the R `tidyr` package this is a \"gather\"\n",
+    "- In OpenRefine it's a \"Transpose->Transpose cells across columns into rows...\" operation\n",
+    "- In Tableau this is called a \"Pivot\"\n",
+    "- Many call this process \"un-pivoting\", since a *Pivot Table* in Excel converts data in the opposite direction, from the *tall* format into *wide*. \n"
    ]
   },
   {
@@ -113,12 +137,14 @@
     "### Minimally, you need to specify \n",
     "\n",
     "- the DataFrame to \"melt\"\n",
-    "- a list of which columns don't get \"un-pivoted\" – these values will get repeated."
+    "- a list of which columns don't get \"un-pivoted\" – these values will get repeated.\n",
+    "\n",
+    "*Notice that the column headers by default end up in a column called \"variable\", and the table body values end up in a column called \"value\".*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +168,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>label</th>\n",
+       "      <th>state</th>\n",
        "      <th>variable</th>\n",
        "      <th>value</th>\n",
        "    </tr>\n",
@@ -150,56 +176,56 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>x</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2009</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>B</td>\n",
-       "      <td>x</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2009</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>C</td>\n",
-       "      <td>x</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2009</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>y</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2010</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>B</td>\n",
-       "      <td>y</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2010</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>C</td>\n",
-       "      <td>y</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2010</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>A</td>\n",
-       "      <td>z</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2011</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>B</td>\n",
-       "      <td>z</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2011</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>C</td>\n",
-       "      <td>z</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2011</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -207,25 +233,25 @@
        "</div>"
       ],
       "text/plain": [
-       "  label variable  value\n",
-       "0     A        x      1\n",
-       "1     B        x      2\n",
-       "2     C        x      3\n",
-       "3     A        y      4\n",
-       "4     B        y      5\n",
-       "5     C        y      6\n",
-       "6     A        z      7\n",
-       "7     B        z      8\n",
-       "8     C        z      9"
+       "    state variable  value\n",
+       "0   Maine     2009      1\n",
+       "1  Alaska     2009      2\n",
+       "2    Ohio     2009      3\n",
+       "3   Maine     2010      4\n",
+       "4  Alaska     2010      5\n",
+       "5    Ohio     2010      6\n",
+       "6   Maine     2011      7\n",
+       "7  Alaska     2011      8\n",
+       "8    Ohio     2011      9"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = pd.melt(df, ['label'])\n",
+    "df2 = pd.melt(df, ['state'])\n",
     "df2"
    ]
   },
@@ -237,15 +263,15 @@
     "\n",
     "More fully, you can explicitly specify the\n",
     "\n",
-    "- list of columns that don't get melted (and get repeated) – `id_vars=`\n",
-    "- list of columns that get melted from columns into rows – `value_vars=`\n",
-    "- name you want for the column that used to be column headers – `var_name=`\n",
-    "- name you want for the column that used to be the table body values – `value_name=`\n"
+    "- list of columns that don't get melted (and, thus, will get repeated): `id_vars=`\n",
+    "- list of columns that get melted from columns into rows: `value_vars=`\n",
+    "- name you want for the column that used to be column headers: `var_name=`\n",
+    "- name you want for the column that used to be the table body values: `value_name=`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -269,64 +295,64 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>letter</th>\n",
+       "      <th>state</th>\n",
+       "      <th>year</th>\n",
        "      <th>number</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>x</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2009</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>B</td>\n",
-       "      <td>x</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2009</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>C</td>\n",
-       "      <td>x</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2009</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>y</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2010</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>B</td>\n",
-       "      <td>y</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2010</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>C</td>\n",
-       "      <td>y</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2010</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>A</td>\n",
-       "      <td>z</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>2011</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>B</td>\n",
-       "      <td>z</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>2011</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>C</td>\n",
-       "      <td>z</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2011</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -334,27 +360,36 @@
        "</div>"
       ],
       "text/plain": [
-       "  label letter  number\n",
-       "0     A      x       1\n",
-       "1     B      x       2\n",
-       "2     C      x       3\n",
-       "3     A      y       4\n",
-       "4     B      y       5\n",
-       "5     C      y       6\n",
-       "6     A      z       7\n",
-       "7     B      z       8\n",
-       "8     C      z       9"
+       "    state  year  number\n",
+       "0   Maine  2009       1\n",
+       "1  Alaska  2009       2\n",
+       "2    Ohio  2009       3\n",
+       "3   Maine  2010       4\n",
+       "4  Alaska  2010       5\n",
+       "5    Ohio  2010       6\n",
+       "6   Maine  2011       7\n",
+       "7  Alaska  2011       8\n",
+       "8    Ohio  2011       9"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = pd.melt(df, id_vars=['label'], value_vars=['x','y','z'], var_name='letter', value_name='number')\n",
+    "df2 = pd.melt(df, id_vars=['state'], \n",
+    "              value_vars=['2009','2010','2011'], \n",
+    "              var_name='year', value_name='number')\n",
     "df2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
