--- a/MeltExercise.ipynb
+++ b/MeltExercise.ipynb
@@ -83,7 +83,7 @@
    },
    "outputs": [],
    "source": [
-    "formatted_df = pd.____(__, ____, _____=\"income\", _____=\"freq\")"
+    "formatted_df = df.____(____, _____=\"income\", _____=\"freq\")"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
