--- a/MeltExerciseSolutions.ipynb
+++ b/MeltExerciseSolutions.ipynb
@@ -84,7 +84,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Agnostic</td>\n",
        "      <td>27</td>\n",
        "      <td>34</td>\n",
@@ -94,7 +94,7 @@
        "      <td>137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Atheist</td>\n",
        "      <td>12</td>\n",
        "      <td>27</td>\n",
@@ -104,7 +104,7 @@
        "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Buddhist</td>\n",
        "      <td>27</td>\n",
        "      <td>21</td>\n",
@@ -114,7 +114,7 @@
        "      <td>58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Catholic</td>\n",
        "      <td>418</td>\n",
        "      <td>617</td>\n",
@@ -124,7 +124,7 @@
        "      <td>1116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Dont know/refused</td>\n",
        "      <td>15</td>\n",
        "      <td>14</td>\n",
@@ -134,7 +134,7 @@
        "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>575</td>\n",
        "      <td>869</td>\n",
@@ -144,7 +144,7 @@
        "      <td>1486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>6</td>\n",
+       "      <th>6</th>\n",
        "      <td>Hindu</td>\n",
        "      <td>1</td>\n",
        "      <td>9</td>\n",
@@ -154,7 +154,7 @@
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>7</td>\n",
+       "      <th>7</th>\n",
        "      <td>Historically Black Prot</td>\n",
        "      <td>228</td>\n",
        "      <td>244</td>\n",
@@ -164,7 +164,7 @@
        "      <td>223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>8</td>\n",
+       "      <th>8</th>\n",
        "      <td>Jehovahs Witness</td>\n",
        "      <td>20</td>\n",
        "      <td>27</td>\n",
@@ -174,7 +174,7 @@
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <th>9</th>\n",
        "      <td>Jewish</td>\n",
        "      <td>19</td>\n",
        "      <td>19</td>\n",
@@ -247,7 +247,7 @@
    },
    "outputs": [],
    "source": [
-    "formatted_df = pd.melt(df, [\"religion\"], var_name=\"income\", value_name=\"freq\")"
+    "formatted_df = df.melt([\"religion\"], var_name=\"income\", value_name=\"freq\")"
    ]
   },
   {
@@ -297,91 +297,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Agnostic</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>30</td>\n",
+       "      <th>30</th>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>40</td>\n",
+       "      <th>40</th>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>50</td>\n",
+       "      <th>50</th>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$50-75k</td>\n",
        "      <td>137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>10</td>\n",
+       "      <th>10</th>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>20</td>\n",
+       "      <th>20</th>\n",
        "      <td>Agnostic</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>41</td>\n",
+       "      <th>41</th>\n",
        "      <td>Atheist</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>21</td>\n",
+       "      <th>21</th>\n",
        "      <td>Atheist</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>11</td>\n",
+       "      <th>11</th>\n",
        "      <td>Atheist</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>31</td>\n",
+       "      <th>31</th>\n",
        "      <td>Atheist</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Atheist</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>51</td>\n",
+       "      <th>51</th>\n",
        "      <td>Atheist</td>\n",
        "      <td>$50-75k</td>\n",
        "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>42</td>\n",
+       "      <th>42</th>\n",
        "      <td>Buddhist</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Buddhist</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>12</td>\n",
+       "      <th>12</th>\n",
        "      <td>Buddhist</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>21</td>\n",
@@ -463,91 +463,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>55</td>\n",
+       "      <th>55</th>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$50-75k</td>\n",
        "      <td>1486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>53</td>\n",
+       "      <th>53</th>\n",
        "      <td>Catholic</td>\n",
        "      <td>$50-75k</td>\n",
        "      <td>1116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>25</td>\n",
+       "      <th>25</th>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>1064</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>35</td>\n",
+       "      <th>35</th>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>45</td>\n",
+       "      <th>45</th>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>881</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15</td>\n",
+       "      <th>15</th>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>23</td>\n",
+       "      <th>23</th>\n",
        "      <td>Catholic</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>33</td>\n",
+       "      <th>33</th>\n",
        "      <td>Catholic</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>43</td>\n",
+       "      <th>43</th>\n",
        "      <td>Catholic</td>\n",
        "      <td>$40-50k</td>\n",
        "      <td>638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>13</td>\n",
+       "      <th>13</th>\n",
        "      <td>Catholic</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>Evangelical Prot</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Catholic</td>\n",
        "      <td>&lt;$10k</td>\n",
        "      <td>418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>17</td>\n",
+       "      <th>17</th>\n",
        "      <td>Historically Black Prot</td>\n",
        "      <td>$10-20k</td>\n",
        "      <td>244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>37</td>\n",
+       "      <th>37</th>\n",
        "      <td>Historically Black Prot</td>\n",
        "      <td>$30-40k</td>\n",
        "      <td>238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>27</td>\n",
+       "      <th>27</th>\n",
        "      <td>Historically Black Prot</td>\n",
        "      <td>$20-30k</td>\n",
        "      <td>236</td>\n",
@@ -604,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
